[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbi"
version = "0.3.1"
authors = [
  { name="Keming Zhang", email="kemingz@berkeley.edu" },
]
description = "Neural Bayesian Inference"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kmzzhang/nbi"
