[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbi"
version = "0.4.1"
authors = [
  { name="Keming Zhang", email="kemingz@berkeley.edu" },
]
description = "Neural Bayesian Inference"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.4",
    "numpy",
    "scipy",
    "matplotlib",
    "corner",
    "joblib",
    "pytest",
    "tqdm",
    "multiprocess",
    "wandb"
]

[project.urls]
"Homepage" = "https://github.com/kmzzhang/nbi"

[tool.ruff]
line-length = 88
target-version = 'py310'
select = [
    'I',
    'UP',
    'C4',
    'E713',
    'PIE',
    'PGH003',
    'PLR0402',
    'SIM101',
    'SIM109',
    'SIM110',
    'SIM111',
    'SIM118',
    'SIM2',
]
